Fix spacing between article and comments

--- a/style.css
+++ b/style.css
@@ -247,9 +247,6 @@ table > tfoot > tr.warning > th {
 }
 .sticky {
 }
-.hentry {
-  margin: 0 0 6em;
-}
 .byline {
   display: none;
 }
@@ -450,6 +447,11 @@ object {
 /* =Comments
 ----------------------------------------------- */
 
+#comments {
+  border-top: 1px dotted;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
 .comment-content a {
   -ms-word-wrap: break-word;
       word-wrap: break-word;
